Examples/CloudFormation/MyInfrastructure.yaml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  VpcCidrBlockFirstTwoOctets:
    Type: String
    Default: "10.0"
    Description: Enter the first two octets of the VPC CIDR block (e.g., "10.0")
Metadata:
  'AWS::CloudFormation::Designer':
    1decebeb-8a36-4635-baf5-4e1fed8b5f73:
      size:
        width: 1050
        height: 390
      position:
        x: -350
        'y': 90
      z: 0
      embeds:
        - 602d23a8-8d50-4def-b4e8-36c32456e5f1
        - 61b1ae21-39c2-4a7e-ab73-1dc6c2b87d15
        - 45f146bb-a5d3-4a1b-af4e-10bcc983a962
        - 818cbf9a-1dd0-444e-ad87-cdfca16aec62
        - f148ad27-4abc-4932-a1f9-ec14bb2e0abf
    61b1ae21-39c2-4a7e-ab73-1dc6c2b87d15:
      size:
        width: 140
        height: 140
      position:
        x: -330
        'y': 310
      z: 1
      parent: 1decebeb-8a36-4635-baf5-4e1fed8b5f73
      embeds: []
    602d23a8-8d50-4def-b4e8-36c32456e5f1:
      size:
        width: 140
        height: 140
      position:
        x: -180
        'y': 310
      z: 1
      parent: 1decebeb-8a36-4635-baf5-4e1fed8b5f73
      embeds: []
    45f146bb-a5d3-4a1b-af4e-10bcc983a962:
      size:
        width: 140
        height: 140
      position:
        x: -330
        'y': 130
      z: 1
      parent: 1decebeb-8a36-4635-baf5-4e1fed8b5f73
      embeds: []
    818cbf9a-1dd0-444e-ad87-cdfca16aec62:
      size:
        width: 60
        height: 60
      position:
        x: -140
        'y': 120
      z: 1
      parent: 1decebeb-8a36-4635-baf5-4e1fed8b5f73
      embeds: []
    37abc9da-31e7-49e8-8707-dd35bf108407:
      size:
        width: 60
        height: 60
      position:
        x: -140
        'y': 10
      z: 0
      embeds: []
    f148ad27-4abc-4932-a1f9-ec14bb2e0abf:
      size:
        width: 60
        height: 60
      position:
        x: -140
        'y': 200
      z: 1
      parent: 1decebeb-8a36-4635-baf5-4e1fed8b5f73
      embeds: []
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Join
        - "/"
        - - !Join [".", [!Ref VpcCidrBlockFirstTwoOctets, "0"]]
          - "16"
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 1decebeb-8a36-4635-baf5-4e1fed8b5f73
  IGW:
    Type: 'AWS::EC2::InternetGateway'
    Properties: {}
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 37abc9da-31e7-49e8-8707-dd35bf108407
  IGWAttach:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref IGW
  RouteTablePublic:
    Type: 'AWS::EC2::RouteTable'
    Properties: {}
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 45f146bb-a5d3-4a1b-af4e-10bcc983a962
  RouteLocal:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTablePublic
      DestinationCidrBlock: 10.0.0.0/16
      VpcPeeringConnectionId: !Ref VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: f148ad27-4abc-4932-a1f9-ec14bb2e0abf
  RoutePublic:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTablePublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 818cbf9a-1dd0-444e-ad87-cdfca16aec62
  SubnetPublic1:
    Type: 'AWS::EC2::Subnet'
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Join
          - "/"
          - - !Select [0, !Split [".", !Ref VPC]]
            - !Join [".", [!Select [1, !Split [".", !Ref VPC]], "1", "0/24"]]
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 61b1ae21-39c2-4a7e-ab73-1dc6c2b87d15
  SubnetPublic1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetPublic1
      RouteTableId: !Ref RouteTablePublic
  SubnetPublic2:
    Type: 'AWS::EC2::Subnet'
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Join
          - "/"
          - - !Select [0, !Split [".", !Ref VPC]]
            - !Join [".", [!Select [1, !Split [".", !Ref VPC]], "1", "0/24"]]
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 602d23a8-8d50-4def-b4e8-36c32456e5f1
  SubnetPublic2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetPublic2
      RouteTableId: !Ref RouteTablePublic
